fix spacing

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -152,7 +152,7 @@ body {
 .rating:hover > input:checked ~ label:before{ opacity: 0.4; }
 
 #review .top{
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 #review .bottom{
@@ -213,7 +213,7 @@ body {
 }
 
 #writebutton{
-  margin-bottom: 20px;
+  margin-bottom: 9%;
   color: white;
 }
 
@@ -248,23 +248,23 @@ body {
 
 #gallery {
   margin-top: 3%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
 }
 
 hr {
-  margin-top: 7%;
+  margin-top: 9%;
   clear: left;
 }
 
 #reviews {
-  margin-top: 3%;
+  margin-top: 2%;
   margin-bottom: 3%;
 }
 
 #write-review {
-  margin-top: 3%;
+  margin-top: 2%;
   padding-bottom: 0;
-  margin-bottom: 0;
+  margin-bottom: 1%;
 }
 
 #write-a-review {
